--- a/war/index.html
+++ b/war/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link type="text/css" rel="stylesheet" href="Device.css">
+    <!--<link type="text/css" rel="stylesheet" href="Device.css">-->
     <title>Network Devices</title>
     <script type="text/javascript" language="javascript" src="device/device.nocache.js"></script>
   </head>
