--- a/war/nox.html
+++ b/war/nox.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name='gwt:property' content='zoneManager=nox'/>
-    <link type="text/css" rel="stylesheet" href="Device.css">
+    <!--<link type="text/css" rel="stylesheet" href="Device.css">-->
     <title>Network Devices</title>
     <script type="text/javascript" language="javascript" src="device/device.nocache.js"></script>
   </head>
