Improved dragging Grouping of devices with the same manufacturer.

--- a/war/index.html
+++ b/war/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name='gwt:property' content='model=control'/>    
     <!--<link type="text/css" rel="stylesheet" href="Device.css">-->
     <title>Network Devices</title>
     <script type="text/javascript" language="javascript" src="device/device.nocache.js"></script>
