--- a/war/index.html
+++ b/war/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name='gwt:property' content='model=control'/>    
     <title>Control Panel</title>
-    <script type="text/javascript" language="javascript" src="device/device.nocache.js"></script>
+    <script type="text/javascript" src="device/device.nocache.js"></script>
   </head>
   <body>
     <noscript>
