--- a/war/index.html
+++ b/war/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-touch-fullscreen" content="yes" />    
     <title>Control Panel</title>
     <script type="text/javascript" src="device/device.nocache.js"></script>
   </head>
