Added icons for ipad

--- a/war/index.html
+++ b/war/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-touch-fullscreen" content="yes" />    
+	<meta name="apple-touch-fullscreen" content="yes" />
+    <link rel="apple-touch-icon" href="image/control57.png" />  
+	<link rel="apple-touch-icon" sizes="72x72" href="image/control72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="image/control114.png" />
     <title>Control Panel</title>
     <script type="text/javascript" src="device/device.nocache.js"></script>
   </head>
