--- a/war/index.html
+++ b/war/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html manifest="cache.manifest">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
